Style: Fix tag foldout overflow

--- a/css/leaderboard-filters.css
+++ b/css/leaderboard-filters.css
@@ -314,7 +314,7 @@
     display: none;
     position: absolute;
     top: 100%;
-    left: 0;
+    left: calc(100% - 350px);
     z-index: 1000;
 }
 
